Set the font to italic for symbolic links before calculating the size of the area which is made available to KFileItemDelegate::paint. Fixes the problem that Dolphin truncates the names of some symbolic links if the italic version of the font needs more space than the non-italic one.

BUG: 183620
CCMAIL: fredrikh@kde.org

svn path=/trunk/KDE/kdebase/apps/; revision=968589